2003-10-11  Bastien Nocera  <hadess@hadess.net>

	* src/totem-pl-parser.c: (totem_pl_parser_add_pls),
	(totem_pl_parser_ignore): fix parsing of .pls playlists (ie. don't
	whinge if there's no files in it)

2003-10-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_mrl_to_title),
	(totem_playlist_save_get_iter_func),
	(totem_playlist_save_current_playlist),
	(gtk_tree_selection_has_selected): do the saving using the parser
	as well, nifty (not tested obviously, i'm so dazed by the visuals
	of my running version that i won't stop it)

2003-10-10  Bastien Nocera  <hadess@hadess.net>

	* configure.in: added gnome-vfs-module as a dep (urgh!)
	* src/.cvsignore: upd
	* src/Makefile.am: upd
	* src/totem-pl-parser.[ch]: build from Colin Walters' work on
	splitting out the parsing code from the playlist to another object
	* src/totem-playlist.c: (totem_playlist_entry_parsed),
	(totem_playlist_init), (totem_playlist_finalize),
	(totem_playlist_add_mrl): updated the playlist to use the new parser
	* src/totemplparser-marshal.list: added

2003-10-10  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (bacon_video_widget_tick_send):
	oopsie, the tick wasn't sent when there wasn't a logo ;)

2003-10-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_add_one_mrl),
	(totem_playlist_add_mrl): add a work-around for huge playlists so
	that we try to guess by name first (that fixes loading the remote
	playlists with ~500 entries on magnatune.com)

2003-10-10  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (bacon_video_widget_unrealize):
	only switch off the visual effects if we're not paused, fixes a
	deadlock on exit

2003-10-07  Bastien Nocera  <hadess@hadess.net>

	* README: remove a TODO item
	* src/bacon-video-widget-gst.c: (got_time_tick):
	* src/bacon-video-widget-xine.c: (bacon_video_widget_tick_send):
	modify backends to only send ticks when playing back a movie